--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .cabecalho {
-    background-image: linear-gradient(#D72C7E, #764EE9);
+    background-color: black;
     color:  white;
     display: flex;
     justify-content: space-around;
@@ -48,6 +48,38 @@ body {
     padding: 24px 0;
 }
 
+.estudante {
+    background-image: linear-gradient(#D72C7E, #764EE9);
+}
+
 .estudante-imagem {
     width: 120px;
+}
+
+.estudante-icone {
+    width: 15px;
+}
+
+.estudante-div {
+    text-align: center;
+}
+
+.estudante-titulo {
+    text-align: center;
+    padding: 50px 0;
+}
+
+.estudantes-todos {
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20%;
+}
+
+.rodape {
+    background-color: black;
+    text-align: center;
+}
+
+.rodape-imagem {
+    height: 60px;
+    padding: 12px 0;
 }
